# eccomerce_with_Flask

./: pyproject.toml
eccomerce_flask/: app.py
ecommerce_flask/: app.py
