[tool.poetry]
name = "eccomerce-flask"
version = "0.1.0"
description = ""
authors = ["yedsrjr <edsonr065@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.0"
flask-sqlalchemy = "3.1.1"
flask-login = "0.6.2"
flask-cors = "3.0.10"
werkzeug = "2.3.0"
ignr = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
